--- a/view/cart.html
+++ b/view/cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/mainstyle.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -22,6 +23,14 @@
             <div class="search-bar">
                 <input type="text" placeholder="Tìm kiếm...">
                 <button><i class="fas fa-search"></i> Tìm</button>
+            </div>
+
+            <div class="user-cart">
+                <a href="dangky.html" class="signup">Đăng ký</a>
+                <a href="#" class="login">Đăng nhập</a>
+                <a href="#" class="cart">
+                    <i class="fas fa-shopping-cart"></i> Giỏ hàng
+                </a>
             </div>
         </div>
     </header>
