--- a/view/cart.html
+++ b/view/cart.html
@@ -11,10 +11,10 @@
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <a href="#"><img src="image/logo.png" alt="Logo" width="50" height="50"></a>
+                <a href="index.html"><img src="image/logo.png" alt="Logo" width="50" height="50"></a>
             </div>
             <nav>
-                <a href="#">Trang chủ</a>
+                <a href="index.html">Trang chủ</a>
                 <a href="#">Sản phẩm</a>
                 <a href="#">Giới thiệu</a>
                 <a href="#">Tư Vấn</a>
