--- a/view/dangnhap.html
+++ b/view/dangnhap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Ký</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/mainstyle.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -35,34 +35,21 @@
         </div>
     </header>
 
-    <section class="dangky-section">
-        <div class="dangky-container">
+    <section class="login-section">
+        <div class="login-container">
             <h2><a href="dangnhap.html">Đăng Nhập</a>  |  <a href="dangky.html">Đăng Ký</a></h2>
-            <form action="#" method="post" class="signup-form">
-                <div class="form-group">
-                    <label for="username">Họ Tên</label>
-                    <input type="text" id="username" name="username" required placeholder="Nhập họ tên của bạn">
-                </div>
+            <form action="" method="POST" class="login-form">
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required placeholder="Nhập email của bạn">
+                    <input type="email" id="email" name="email" placeholder="Nhập email" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Mật khẩu</label>
-                    <input type="password" id="password" name="password" required placeholder="Nhập mật khẩu của bạn">
+                    <input type="password" id="password" name="password" placeholder="Nhập mật khẩu" required>
                 </div>
-                <div class="form-group">
-                    <label for="confirm-password">Xác nhận mật khẩu</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required placeholder="Nhập lại mật khẩu">
-                </div>
-                <div class="form-group">
-                    <label for="phone">Số điện thoại</label>
-                    <input type="tel" id="phone" name="phone" required placeholder="Nhập số điện thoại của bạn">
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn-submit">Đăng Ký</button>
-                </div>
+                <button type="submit" class="btn-submit">Đăng Nhập</button>
             </form>
+            <p>Bạn không nhớ tải khoản & mật khẩu của mình: <a href="quenmatkhau.html">Quên mật khẩu</a></p>
         </div>
     </section>
 
@@ -93,5 +80,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/slide.js"></script>
 </body>
 </html>
