--- a/view/dangky.html
+++ b/view/dangky.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <a href="index.html">Trang chủ</a>
-                <a href="#">Sản phẩm</a>
+                <a href="product.html">Sản phẩm</a>
                 <a href="#">Giới thiệu</a>
                 <a href="#">Tư Vấn</a>
                 <a href="#">Liên hệ</a>
