--- a/view/index.html
+++ b/view/index.html
@@ -34,6 +34,9 @@
             </div>
         </div>
     </header>
+    <div class="slide-show">
+        <img src="image/sp1.png" alt="">
+    </div>
     <section class="footer">
         <div class="footer-container">
             <p>Nhận Tư Vấn</p>
