--- a/view/index.html
+++ b/view/index.html
@@ -26,17 +26,24 @@
             </div>
 
             <div class="user-cart">
+                <a href="dangnhap.html" class="login">Đăng nhập</a>
                 <a href="dangky.html" class="signup">Đăng ký</a>
-                <a href="#" class="login">Đăng nhập</a>
                 <a href="#" class="cart">
                     <i class="fas fa-shopping-cart"></i> Giỏ hàng
                 </a>
             </div>
         </div>
     </header>
-    <div class="slide-show">
-        <img src="image/sp1.png" alt="">
+
+<div class="slide-show">
+    <div class="slide-container">
+        <img src="image/banner1.webp" alt="Image 1" class="slide">
+        <img src="image/banner2.webp" alt="Image 2" class="slide">
+        <img src="image/banner3.webp" alt="Image 3" class="slide">
+        <img src="image/banner4.webp" alt="Image 4" class="slide">
     </div>
+</div>
+
     <section class="footer">
         <div class="footer-container">
             <p>Nhận Tư Vấn</p>
@@ -64,7 +71,9 @@
     </section>
 
     <script src="js/script.js"></script>
+
     <script src="js/slide.js"></script>
+
 
 </body>
 </html>
