add them trang gio hang

--- a/view/index.html
+++ b/view/index.html
@@ -11,10 +11,10 @@
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <a href="#"><img src="image/logo.png" alt="Logo" width="50" height="50"></a>
+                <a href="index.html"><img src="image/logo.png" alt="Logo" width="50" height="50"></a>
             </div>
             <nav>
-                <a href="#">Trang chủ</a>
+                <a href="index.html">Trang chủ</a>
                 <a href="#">Sản phẩm</a>
                 <a href="#">Giới thiệu</a>
                 <a href="#">Tư Vấn</a>
@@ -28,7 +28,7 @@
             <div class="user-cart">
                 <a href="dangnhap.html" class="login">Đăng nhập</a>
                 <a href="dangky.html" class="signup">Đăng ký</a>
-                <a href="#" class="cart">
+                <a href="cart.html" class="cart">
                     <i class="fas fa-shopping-cart"></i> Giỏ hàng
                 </a>
             </div>
