--- a/view/cart.html
+++ b/view/cart.html
@@ -36,16 +36,16 @@
     </header>
     <section class="cart">
         <div class="container">
-            <div class="cart-top-warp">
+            <div class="cart-top-wrap">
                 <div class="cart-top">
-                    <div class="cart-top-cart">
-                        <i></i>
+                    <div class="cart-top-cart cart-top-item">
+                        <i class="fas fa-shopping-cart "></i>
                     </div>
-                    <div class="cart-top-cart">
-                        <i></i>
+                    <div class="cart-top-addres cart-top-item">
+                        <i class="fas fa-map-marker-alt"></i>
                     </div>
-                    <div class="cart-top-cart">
-                        <i></i>
+                    <div class="cart-top-payment cart-top-item">
+                        <i class="fas fa-money-check-alt"></i>
                     </div>
                 </div>
             </div>
