--- a/view/product.html
+++ b/view/product.html
@@ -49,11 +49,11 @@
                             <span class="arrow">&#9660;</span>
                         </div>
                         <div class="section-content">
-                            <li > Dao Cắt Thái</li>
-                            <li > Dao Phi Lê</li>
-                            <li > Dao Sushi</li>
-                            <li > Dao Chặt Xương</li>
-                            <li > Dao Bếp</li>
+                            <li ><a href="">Dao Cắt Thái</a> </li>
+                            <li ><a href="">Dao Phi Lê</a></li>
+                            <li ><a href="">Dao Sushi</a></li>
+                            <li ><a href="">Dao Chặt Xương</a> </li>
+                            <li ><a href="">Dao Bếp</a></li>
                         </div>
                     </div>
     
@@ -63,11 +63,11 @@
                             <span class="arrow">&#9660;</span>
                         </div>
                         <div class="section-content">
-                            <li>Dưới 1.000.000₫</li>
-                            <li>1.000.000₫ - 2.000.000₫</li>
-                            <li>2.000.000₫ - 3.000.000₫</li>
-                            <li> 3.000.000₫ - 4.000.000₫</li>
-                                <li>Trên 4.000.000₫</li>
+                            <li><a href="">Dưới 1.000.000₫</a></li>
+                            <li><a href="">1.000.000₫ - 2.000.000₫</a></li>
+                            <li><a href="">2.000.000₫ - 3.000.000₫</a></li>
+                            <li><a href="">3.000.000₫ - 4.000.000₫</a> </li>
+                            <li><a href="">Trên 4.000.000₫</a></li>
                         </div>
                     </div>
                 </div>
