--- a/view/cart.html
+++ b/view/cart.html
@@ -104,7 +104,7 @@
                         <button>Thanh Toán</button>
                     </div>
                     <div class="cart-content-right-dangnhap">
-                        <p>Tài Khoản</p>
+                        <p>Tài Khoản</p><br>
                         <p>Vui lòng <a href="">Đăng nhập</a> tài khoản của bạn để thanh toán</p>
                     </div>
                 </div>
