--- a/view/css/mainstyle.css
+++ b/view/css/mainstyle.css
@@ -619,7 +619,9 @@ h2 a:hover {
 }
 
 /*------------------Cart-------------------*/
-
+.cart-content{
+    padding: 80px 100px ;
+}
 .cart-top-wrap{
     display: flex;
     justify-content: center;
@@ -653,10 +655,11 @@ h2 a:hover {
 .cart-top-cart i{
     color: #0a70ff;
 }
-.cart-content-left{
-    flex: 2;
+.cart-content-left {
+    flex: 6.5; 
     padding-right: 12px;
 }
+
 .cart-content-left table{
     width: 100%;
     text-align: center;
@@ -668,7 +671,7 @@ h2 a:hover {
     text-transform: uppercase;
     color: #333;
     border-collapse: collapse;
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #bcbcbc;
 
 }
 .cart-content-left table p{
@@ -688,4 +691,94 @@ h2 a:hover {
 }
 .cart-content-left td:first-child img{
     width: 130px;
+}
+.cart-content-left td:nth-child(2){
+    max-width: 130px;
+}
+.cart-content-left td:nth-child(3) img{
+    width: 130px;
+}
+.cart-content-right {
+    flex: 3.5; /* 3 phần */
+    padding-left: 12px;
+    border-left: 2px solid #ddd;
+}
+.cart-content-right table{
+    width: 100%;
+}
+.cart-content-right table th{
+    padding-bottom: 30px;
+    font-family: var(--main-text-font);
+    font-size: 12px;
+    font-size: 12px;
+    color: #333;
+    border-collapse: collapse;
+    border-bottom: 2px solid #bcbcbc;
+}
+
+.cart-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; 
+}
+
+.cart-content-left table, .cart-content-right table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+.cart-content-right table td{
+    font-family: var(--main-text-font);
+    font-size: 15px;
+    color: #333;
+    padding: 6px 0;
+}
+.cart-content-right tr:nth-child(4) td{
+    border-bottom: 2px solid #ddd;
+}
+.cart-content-right tr td:last-child{
+    text-align: right;
+}
+.cart-content-right text{
+    margin: 20px 0;
+    text-align: center;
+}
+.cart-content-right text p{
+    font-family: var(--main-text-font);
+    font-size: 15px;
+    color: #333;
+}
+.cart-content-right button{
+    text-align: center;
+    align-items: center;
+}
+.cart-content-right-button button{
+    padding: 0 18px;
+    height: 35px;
+    cursor: pointer;
+}
+.cart-content-right-button button:first-child{
+    background-color: #fff;
+    border: 1px solid #000000;
+    margin-right: 20px;
+}
+.cart-content-right-button button:first-child:hover{
+    background-color: #ddd;
+}
+.cart-content-right-button button:last-child{
+    background-color: #000000;
+    color: #fff;
+    border: none;
+}
+.cart-content-right-button button:last-child:hover{
+    background-color: #ddd;
+    color: #000000;
+}
+.cart-content-right-dangnhap{
+    margin-top: 20px;
+}
+.cart-content-right-dangnhap p{
+    font-family: var(--main-text-font);
+    font-size: 14px;
+    color: #333;
 }
