--- a/view/dangnhap.html
+++ b/view/dangnhap.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <a href="index.html">Trang chủ</a>
-                <a href="#">Sản phẩm</a>
+                <a href="product.html">Sản phẩm</a>
                 <a href="#">Giới thiệu</a>
                 <a href="#">Tư Vấn</a>
                 <a href="#">Liên hệ</a>
@@ -28,7 +28,7 @@
             <div class="user-cart">
                 <a href="dangnhap.html" class="login">Đăng nhập</a>
                 <a href="dangky.html" class="signup">Đăng ký</a>
-                <a href="#" class="cart">
+                <a href="cart.html" class="cart">
                     <i class="fas fa-shopping-cart"></i> Giỏ hàng
                 </a>
             </div>
