--- a/view/product.html
+++ b/view/product.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header-container">
             <div class="logo">
-                <a href="#"><img src="image/logo.png" alt="Logo" width="50" height="50"></a>
+                <a href="index.html"><img src="image/logo.png" alt="Logo" width="50" height="50"></a>
             </div>
             <nav>
                 <a href="index.html">Trang chủ</a>
