sua lai product

--- a/view/product.html
+++ b/view/product.html
@@ -69,21 +69,21 @@
         <div class="products">
 
             <div class="product-item">
-                <img src="product-1.jpg" alt="Sản phẩm 1">
+                <img src="image/product1.png" alt="Sản phẩm 1">
                 <h3>Dao Cắt Thái</h3>
                 <p class="price">1,500,000đ</p>
                 <button class="add-to-cart">Thêm vào giỏ</button>
             </div>
 
             <div class="product-item">
-                <img src="product-2.jpg" alt="Sản phẩm 2">
+                <img src="image/product2.png" alt="Sản phẩm 2">
                 <h3>Dao Sushi</h3>
                 <p class="price">1,200,000đ</p>
                 <button class="add-to-cart">Thêm vào giỏ</button>
             </div>
 
             <div class="product-item">
-                <img src="product-3.jpg" alt="Sản phẩm 3">
+                <img src="image/product3.webp" alt="Sản phẩm 3">
                 <h3>Dao Phi Lê</h3>
                 <p class="price">1,000,000đ</p>
                 <button class="add-to-cart">Thêm vào giỏ</button>
