--- a/view/cart.html
+++ b/view/cart.html
@@ -62,14 +62,21 @@
                             <th>Xoá</th>
                         </tr>
                         <tr>
-                            <td><img src="image/sp1.png" alt=""></td>
+                            <td><img src="image/product1.png" alt=""></td>
                             <td><p>DAO NHẬT BUNKA</p></td>
                             <td><input type="number" value="1" min="1"></td>
                             <td><p>2.500.000 <sup>đ</sup></p></td>
                             <td><span>X</span></td>
                         </tr>
                         <tr>
-                            <td><img src="image/sp2.png" alt=""></td>
+                            <td><img src="image/product2.png" alt=""></td>
+                            <td><p>DAO NHẬT BUNKA</p></td>
+                            <td><input type="number" value="1" min="1"></td>
+                            <td><p>2.500.000 <sup>đ</sup></p></td>
+                            <td><span>X</span></td>
+                        </tr>
+                        <tr>
+                            <td><img src="image/product3.webp" alt=""></td>
                             <td><p>DAO NHẬT BUNKA</p></td>
                             <td><input type="number" value="1" min="1"></td>
                             <td><p>2.500.000 <sup>đ</sup></p></td>
