--- a/view/product.html
+++ b/view/product.html
@@ -49,6 +49,7 @@
                 <li><a href="#">Dao Chặt Xương</a></li>
                 <li><a href="#">Dao Bếp</a></li>
             </ul>
+            <br>
             <h3>Lọc Giá</h3>
             <ul>
                 <li><a href="">Dưới 1.000.000₫</a></li>
@@ -63,35 +64,129 @@
             <img src="image/banner3.webp" alt="Banner sản phẩm">
         </div>
     </div>
-
-    <div class="product-list">
-        <h2>Sản phẩm nổi bật</h2>
-        <div class="products">
-
-            <div class="product-item">
-                <img src="product-1.jpg" alt="Sản phẩm 1">
-                <h3>Dao Cắt Thái</h3>
-                <p class="price">1,500,000đ</p>
-                <button class="add-to-cart">Thêm vào giỏ</button>
-            </div>
-
-            <div class="product-item">
-                <img src="product-2.jpg" alt="Sản phẩm 2">
-                <h3>Dao Sushi</h3>
-                <p class="price">1,200,000đ</p>
-                <button class="add-to-cart">Thêm vào giỏ</button>
-            </div>
-
-            <div class="product-item">
-                <img src="product-3.jpg" alt="Sản phẩm 3">
-                <h3>Dao Phi Lê</h3>
-                <p class="price">1,000,000đ</p>
-                <button class="add-to-cart">Thêm vào giỏ</button>
-            </div>
-
-        </div>
-    </div>
 </div>
+
+<section class="main-product">  
+<div class="highlighted-products">
+    <h2>Sản phẩm nổi bật</h2>
+    <div class="product-list">
+        <div class="product">
+            <img src="image/dao santoku.webp" alt="Sản phẩm 1" width="200" height="200">
+            <h3>Dao Santoku</h3>
+            <p>1,200,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao gyuto.jpg" alt="Sản phẩm 2" width="200" height="200">
+            <h3>Dao Gyuto</h3>
+            <p>1,500,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao nakiri.jpg" alt="Sản phẩm 3" width="200" height="200">
+            <h3>Dao Nakiri</h3>
+            <p>1,800,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao yanagiba.webp" alt="Sản phẩm 4" width="200" height="200">
+            <h3>Dao Yanagiba</h3>
+            <p>2,000,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao deba.png" alt="Sản phẩm 5" width="200" height="200">
+            <h3>Dao Deba</h3>
+            <p>1,400,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao usuba.jpg" alt="Sản phẩm 6" width="200" height="200">
+            <h3>Dao Usuba</h3>
+            <p>1,600,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao paring.webp" alt="Sản phẩm 7" width="200" height="200">
+            <h3>Dao Paring</h3>
+            <p>800,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+        
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+        <div class="product">
+            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <h3>Dao Chiffon</h3>
+            <p>1,300,000₫</p>
+            <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
+        </div>
+
+    </div>
+        <button id="load-more" onclick="loadMoreProducts()">Xem thêm</button>
+</div>
+</section>   
+
 
     
     <section class="footer">
