--- a/view/product.html
+++ b/view/product.html
@@ -71,112 +71,112 @@
     <h2>DAO NHẬT</h2>
     <div class="product-list">
         <div class="product">
-            <img src="image/dao santoku.webp" alt="Sản phẩm 1" width="200" height="200">
+             <a href="chiTietProduct.html"><img src="image/dao santoku.webp" alt="Sản phẩm 1" width="200" height="200"></a>
             <h3>Dao Santoku</h3>
             <p>1,200,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao gyuto.jpg" alt="Sản phẩm 2" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao gyuto.jpg" alt="Sản phẩm 2" width="200" height="200"></a>
             <h3>Dao Gyuto</h3>
             <p>1,500,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao nakiri.jpg" alt="Sản phẩm 3" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao nakiri.jpg" alt="Sản phẩm 3" width="200" height="200"></a>
             <h3>Dao Nakiri</h3>
             <p>1,800,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao yanagiba.webp" alt="Sản phẩm 4" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao yanagiba.webp" alt="Sản phẩm 4" width="200" height="200"></a>
             <h3>Dao Yanagiba</h3>
             <p>2,000,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao deba.png" alt="Sản phẩm 5" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao deba.png" alt="Sản phẩm 5" width="200" height="200"></a>
             <h3>Dao Deba</h3>
             <p>1,400,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao usuba.jpg" alt="Sản phẩm 6" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao usuba.jpg" alt="Sản phẩm 6" width="200" height="200"></a>
             <h3>Dao Usuba</h3>
             <p>1,600,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao paring.webp" alt="Sản phẩm 7" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao paring.webp" alt="Sản phẩm 7" width="200" height="200"></a>
             <h3>Dao Paring</h3>
             <p>800,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
         
         <div class="product">
-            <img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/dao dai.png" alt="Sản phẩm 8" width="200" height="200"></a>
             <h3>Dao Chiffon</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product1.png" alt="Sản phẩm 9" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product1.png" alt="Sản phẩm 9" width="200" height="200"></a>
             <h3>Dao Nhật BUNKA</h3>
             <p>2,500,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product2.png" alt="Sản phẩm 10" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product2.png" alt="Sản phẩm 10" width="200" height="200"></a>
             <h3>Dao Nhật DEBA - 15cm</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product3.webp" alt="Sản phẩm 11" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product3.webp" alt="Sản phẩm 11" width="200" height="200"></a>
             <h3>Dao Nhật DEBA - 17cm</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product4.webp" alt="Sản phẩm 12" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product4.webp" alt="Sản phẩm 12" width="200" height="200"></a>
             <h3>Dao Nhật GYUTO TAKAYUKI</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product5.webp" alt="Sản phẩm 13" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product5.webp" alt="Sản phẩm 13" width="200" height="200"></a>
             <h3>Dao Nhật KAI NAKIRI SEKI</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product6.webp" alt="Sản phẩm 14" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product6.webp" alt="Sản phẩm 14" width="200" height="200"></a>
             <h3>Dao Nhật KENGATA GYUTO</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product7.webp" alt="Sản phẩm 15" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product7.webp" alt="Sản phẩm 15" width="200" height="200"></a>
             <h3>Dao Nhật KIRITSUKE GYUTO</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
         </div>
 
         <div class="product">
-            <img src="image/product8.jpg" alt="Sản phẩm 16" width="200" height="200">
+            <a href="chiTietProduct.html"><img src="image/product8.jpg" alt="Sản phẩm 16" width="200" height="200"></a>
             <h3>Dao Nhật NAKIRI Bạc 3 KUROTORI</h3>
             <p>1,300,000₫</p>
             <a href="cart.html"><button>Thêm vào giỏ hàng</button></a>
