them thanh toan

--- a/view/cart.html
+++ b/view/cart.html
@@ -41,9 +41,6 @@
                     <div class="cart-top-cart cart-top-item">
                         <i class="fas fa-shopping-cart "></i>
                     </div>
-                    <div class="cart-top-addres cart-top-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                    </div>
                     <div class="cart-top-payment cart-top-item">
                         <i class="fas fa-money-check-alt"></i>
                     </div>
@@ -107,8 +104,8 @@
                         <p style="color: red; font-weight: bold;">mua thêm <span style="font-size: 18px;">500.000đ</span> để được miễn phí SHIP</p>
                     </div>
                     <div class="cart-content-right-button">
-                        <button>Tiếp tục mua sắm</button>
-                        <button>Thanh Toán</button>
+                        <a href="product.html"><button>Tiếp tục mua sắm</button></a>
+                        <a href="payment.html"><button>Thanh Toán</button></a>
                     </div>
                     <div class="cart-content-right-dangnhap">
                         <p>Tài Khoản</p><br>
