--- a/view/payment.html
+++ b/view/payment.html
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="payment-content-right-payment">
-                    <button>TIẾP TỤC THANH TOÁN</button>
+                    <button>THANH TOÁN</button>
 
                 </div>
             </div>
