--- a/view/css/mainstyle.css
+++ b/view/css/mainstyle.css
@@ -53,6 +53,7 @@ nav a:hover {
     border: none;
     border-radius: 5px;
     width: 200px;
+    margin-left: 45px;
 }
 
 .search-bar button {
@@ -602,6 +603,21 @@ h2 a:hover {
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s;
+}
+
+#search-results {
+    display: flex; 
+    flex-wrap: wrap; 
+    gap: 20px; 
+    margin-top: 20px; 
+}
+#search-results .product {
+    width: calc(33.333% - 20px);
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    background: #fff;
 }
 
 .sale-products .buy-now:hover {
