--- a/view/dangnhap.html
+++ b/view/dangnhap.html
@@ -21,9 +21,10 @@
                 <a href="#">Liên hệ</a>
             </nav>
             <div class="search-bar">
-                <input type="text" placeholder="Tìm kiếm...">
-                <button><i class="fas fa-search"></i> Tìm</button>
+                <input type="text" id="search-input" placeholder="Tìm kiếm...">
+                <button id="search-button"><i class="fas fa-search"></i> Tìm</button>
             </div>
+            <div id="search-results" class="product-list"></div>
 
             <div class="user-cart">
                 <a href="dangnhap.html" class="login">Đăng nhập</a>
